# PO_Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  adhoc_notebook.ipynb  pyproject.toml
src/: __init__.py
src/config/: __init__.py  settings.py
src/core/: models.py
src/index/: __init__.py  bm25_store.py  builder.py  chunking.py  dense_store.py  embeddings.py
src/ingestion/: __init__.py  jira_api.py  loader.py
src/monitoring/: logging.py
