[project]
name = "SIG-PO-agent"
version = "1.0.0"
description = "AI agent for product and project management task"
readme = "README.md"
license = {text = "MIT"}
required-python = ">=3.11"

# CORE DEPENDENCIES 


dependencies = [
    #LLM Provider
    "anthropic>=0.40.0,<1.0.0",

    #RAG framework
    #use llamaindex for specific RAG workflow, Langchain can also be use but is more general orchestration framework
    #use for indexing, chunking, retrieval, and evaluation.
    "llama-index-core>=0.12.0",
    "llama-index-embeddings-huggingface>=0.4.0",
    "llama-index-vector-stores-chroma>=0.4.0",
    "llama-index-readers-file>=0.4.0",
    "llama-index-llms-anthropic>=0.6.0",


    #Agent orchestration
    # use LangGraph for human-in-the-loop interrupts, checkpointing, conditional edges.
    # for agent orchestration, NOT for RAG.
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",


    #Vector DB
    #chromadb for development
    #Swap to managed Pinecone/Weaviate when large scale production
    "chromadb>=0.5.0,<1.0.0",

    #Sparse Retrieval
    #BestMatch25 combined with dense (embedding) retrieval via Reciprocal Rank Fusion,
    #it catches exact keyword matches that embeddings might miss.
    "rank-bm25>=0.2.2",

    #Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    #Data Processing
    "pandas>=2.2.0",

    #Resilience
    #tenacity: Retry logic with exponential backoff for external API calls.
    "tenacity>=9.0.0",

    #Logging
    "structlog>=24.0.0",


    #Caching
    "diskcache>=5.6.0",


    #Utilities
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
]

#optional dependencies group
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "pre-commit>=4.0.0",
    "ipython>=8.0.0",
]
eval = [
    # LlamaIndex evaluation modules for measuring RAG quality
    "llama-index-evaluation>=0.4.0",
    "ragas>=0.2.0",
]


#Entry points
jira-agent = "src.cli:main"


[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]



#Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires API keys)",
    "slow: Tests that take >10 seconds",
]
# EDUCATIONAL NOTE: filterwarnings suppresses noisy deprecation warnings
# from third-party libraries during test runs.
filterwarnings = [
    "ignore::DeprecationWarning:llama_index.*",
]

#MyPy
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["chromadb.*", "rank_bm25.*", "llama_index.*"]
ignore_missing_imports = true